[gd_scene load_steps=3 format=3 uid="uid://c8al27qjqdg7s"]

[ext_resource type="Script" path="res://Unit/Components/Memory/MemoryUI.gd" id="1_5jxcf"]
[ext_resource type="Script" path="res://Unit/Components/Memory/ProgramEditor/ProgramEditor.gd" id="2_faw13"]

[node name="MemoryUI" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5jxcf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Palette" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgramEditor" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_faw13")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
placeholder_text = "Info here"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Step" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Step"

[node name="Reset" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Step" to="." method="_on_step_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
